[package]
name = "mongodb-cursor-pagination"
version = "1.0.0-rc.1"
authors = ["Kylian Lichtensteiger <e38c1a93@srylax.dev"]
edition = "2021"
license = "MIT"
keywords = ["mongo", "mongodb", "database", "cursor", "pagination"]
readme = "README.md"
repository = "https://github.com/Srylax/mongodb-cursor-pagination"
description = """
Provides cursor based pagination for the native MongoDB driver in Rust.
"""

[features]
default = []
graphql = ["juniper"]

[dependencies]
base64 = "0.21.0"
bson = "2.5.0"
log = "0.4.17"
mongodb = "2.3.1"
serde = "1.0"
juniper = { version = "0.15.11", optional = true }
futures = "0.3.26"
futures-util = "0.3.26"
thiserror = "1.0.40"
async-trait = "0.1.68"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"]}
