[package]
name = "mongodb-cursor-pagination"
version = "1.0.0-rc.1"
authors = ["Kylian Lichtensteiger <e38c1a93@srylax.dev"]
edition = "2021"
license = "MIT"
keywords = ["mongo", "mongodb", "database", "cursor", "pagination"]
readme = "README.md"
repository = "https://github.com/Srylax/mongodb-cursor-pagination"
description = """
Provides cursor based pagination for the native MongoDB driver in Rust.
"""

[features]
default = []
graphql = ["juniper"]

[dependencies]
base64 = "0.21"
bson = "2.8"
log = "0.4"
mongodb = "2.8"
serde = "1.0"
juniper = { version = "0.15", optional = true }
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"]}
